fix spacing issues

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
 
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 1.5rem;
   max-width: 1024px;
 }
 
@@ -20,7 +20,7 @@ body {
 }
 .flex__item {
   flex: 1;
-  padding: 0 1.5rem 0;
+  padding: 0 1rem 0;
 }
 .flex__item:first-of-type {
   padding-left: 0;
